--- a/shapeloading/build.gradle
+++ b/shapeloading/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 25
@@ -22,5 +23,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.nineoldandroids:library:2.4.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //anko布局
+    compile "org.jetbrains.anko:anko:$anko_version"
+}
+repositories {
+    mavenCentral()
 }
 
